8189064: Crash with compiler/codegen/*Vect.java on Solaris-sparc

Unconditionally call cl->mark_loop_vectorized() when vectors are generated

Reviewed-by: thartmann